[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Hug Me Tight - TTF.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interfaz.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Adonais.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/background FINAL SEMEJANTE (1).jpg" type="Texture" id=4]
[ext_resource path="res://Sprites/CREDITOS.jpg" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -145.0
margin_top = 1.12247
margin_right = -1.0
margin_bottom = 141.122
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -302.0
margin_right = 302.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.054902, 0.976471, 0.0235294, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -373.0
margin_right = 372.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.054902, 0.976471, 0.0235294, 1 )
text = "S i m p e r i o"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonJugar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -106.878
margin_top = -117.122
margin_right = 110.122
margin_bottom = -51.1224
custom_fonts/font = SubResource( 3 )
text = "JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonCreditos" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 177.105
margin_top = -117.122
margin_right = 394.105
margin_bottom = -51.1224
custom_fonts/font = SubResource( 3 )
text = "CRÃ‰DITOS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonAyuda" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -384.126
margin_top = -117.367
margin_right = -167.126
margin_bottom = -51.3674
custom_fonts/font = SubResource( 3 )
text = "AYUDA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ayuda" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 228.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditos" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 228.0
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonVolver" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -417.799
margin_top = -364.309
margin_right = -200.799
margin_bottom = -298.309
custom_fonts/font = SubResource( 3 )
text = "VOLVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="pressed" from="BotonJugar" to="." method="_on_BotonJugar_pressed"]
[connection signal="pressed" from="BotonCreditos" to="." method="_on_BotonCreditos_pressed"]
[connection signal="pressed" from="BotonAyuda" to="." method="_on_BotonAyuda_pressed"]
[connection signal="pressed" from="BotonVolver" to="." method="_on_BotonVolver_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
